--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: 
+      run: |
         docker build . --file Dockerfile --tag fluentd:latest
         docker tag fluentd:latest ifreecomm/fluentd:v1.10.1
         docker login -u kangliqi -p ${{ secrets.DOCKERHUB_TOKEN }}
