--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,4 +19,4 @@ jobs:
         docker build . --file Dockerfile --tag fluentd:latest
         docker tag fluentd:latest ifreecomm/fluentd:v1.10.1
         docker login -u kangliqi -p ${{ secrets.DOCKERHUB_TOKEN }}
-        docker push docker push ifreecomm/fluentd:v1.10.1
+        docker push ifreecomm/fluentd:v1.10.1
